Fix styles to avoid page  break in mobile

--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,10 @@ code {
     monospace;
 }
 
+.app > section {
+  position: relative;
+}
+
 .container {
   position: relative;
 }
